# openapi/openapi.yaml
@@ -187,16 +187,17 @@ components:
       enum:
       - endpoint
       - external
+    DriverId:
+      type: string
+      enum:
+      - unspecified
+      - pipewire
     EndpointDir:
       type: string
       enum:
       - input
       - output
       - duplex
-    EndpointDriver:
-      type: string
-      enum:
-      - pipewire
     EndpointSpec:
       type: object
       required:
@@ -217,7 +218,7 @@ components:
         stream_direction:
           $ref: '#/components/schemas/EndpointDir'
         driver:
-          $ref: '#/components/schemas/EndpointDriver'
+          $ref: '#/components/schemas/DriverId'
         display_name:
           type: string
         system_name:
