# src/io_endpoints/endpoint_dispatcher.rs
@@ -1,14 +1,17 @@
 // Copyright (c) Roc Streaming authors
 // Licensed under MPL-2.0
+use crate::drivers::*;
 use crate::dto::*;
 
+use std::sync::Arc;
+
 pub struct EndpointDispatcher {
-    // TODO
+    driver: Arc<dyn Driver>,
 }
 
 impl EndpointDispatcher {
-    pub fn new() -> Self {
-        EndpointDispatcher {}
+    pub fn new(driver: &Arc<dyn Driver>) -> Self {
+        EndpointDispatcher { driver: Arc::clone(driver) }
     }
 
     pub async fn get_all(&self, _peer_uid: &Uid) -> Vec<EndpointSpec> {
@@ -27,7 +30,7 @@ impl EndpointDispatcher {
             endpoint_uid: *endpoint_uid,
             endpoint_type: EndpointType::SystemDevice,
             stream_direction: EndpointDir::Output,
-            driver: EndpointDriver::Pipewire,
+            driver: DriverId::Pipewire,
             display_name: "Display Name".into(),
             system_name: "system_name".into(),
         }
